Consul/Kubernetes/ServiceFailover/SameDC/apigw-tgw-discoverychain/CorrectWayofCANARYDEPLOYMENTS/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: static-server-test-route
  namespace: default
spec:
  parentRefs:
    - name: api-gateway
      namespace: consul
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /test
      backendRefs:
        - name: static-server-test
          port: 1234
